--- a/Relatório.qmd
+++ b/Relatório.qmd
@@ -12,39 +12,33 @@ format:
       number-sections: false
 ---
 
-
 \newpage
 
 ## Introdução
 
 O presente relatório tem como objetivo a introdução das técnicas de Regressão Linear Simples e a pratica da elaboração de relatórios analíticos fundamentadas na Análise Exploratória de Dados, na resolução de análises conforme os pré-requisitos solicitados para um conjunto de dados.
 
-
-
-
 ## Apresentação
 
-Será realizada uma análise sobre um levantamento das taxas de desemprego e o
-índice de suicídios nos EUA para o período de 1950 a 2019, para o qual o índice de suicídios foi calculado para cada 1000 habitantes.
+Será realizada uma análise sobre um levantamento das taxas de desemprego e o índice de suicídios nos EUA para o período de 1950 a 2019, para o qual o índice de suicídios foi calculado para cada 1000 habitantes.
 
 As variáveis contidas no arquivo "desemprego.csv" são:
 
-:::{.incrementyal}
-- Ano (**ano**);
-- Taxa de Desemprego por 1000 habitantes (**desemp**);
-- Taxa de Suicídio por 1000 habitantes  (**suic**).
+::: incrementyal
+-   Ano (**ano**);
+-   Taxa de Desemprego por 1000 habitantes (**desemp**);
+-   Taxa de Suicídio por 1000 habitantes (**suic**).
 :::
-
 
 ## Objetivos
 
 O objetivo dessa análise visa responder aos seguintes tópicos:
 
-:::{.incrementyal}
-(a) Faça as análises necessárias para verificar se suicídios é função linear do desemprego.  
-(b) Obtenha ainda as estimativas das variâncias de $\beta_0$ e $\beta_1$.  
-(c) Teste a significância do modelo. Que conclusões você chegou com um nível de significância de 5%?  
-(d) Obtenha os intervalos de confianças para os parâmetros do modelo com o nível de 95% de confiança. Interprete os resultados.  
+::: incrementyal
+(a) Faça as análises necessárias para verificar se suicídios é função linear do desemprego.\
+(b) Obtenha ainda as estimativas das variâncias de $\beta_0$ e $\beta_1$.\
+(c) Teste a significância do modelo. Que conclusões você chegou com um nível de significância de 5%?\
+(d) Obtenha os intervalos de confianças para os parâmetros do modelo com o nível de 95% de confiança. Interprete os resultados.\
 :::
 
 ## Análise dos dados
@@ -52,7 +46,6 @@ O objetivo dessa análise visa responder aos seguintes tópicos:
 ### Análise Prévia
 
 Inicialmente vamos verificar as principais medidas resumo dos dados apresentados e verificar a viabilidade gráfica de realizar uma regressão linear a partir dos dados fornecidos.
-
 
 ```{r pacotes}
 #| echo: false
@@ -79,7 +72,6 @@ dados <- dados |>
     suic = as.numeric(suic),
   )
 ```
-
 
 ```{r}
 #| echo: false
@@ -116,9 +108,7 @@ dados|>
   kable_material()
 ```
 
-
 As medidas resumo das taxas de desemprego e suicídio avaliadas não apresetam valores incompatíveis com a análise de regressão linear pretendida, além de mostrarem uma provável normalidade dos dados.
-
 
 ```{r}
 #| echo: false
@@ -164,11 +154,9 @@ b1+b2 + plot_annotation(
 
 ```
 
-A análise dos BoxPlots, um pouco mais informativa, uma vez que agora é possível verificar que não há valores notadamente discrepantes que poderiam influir negativamente na regressão linear. A provável normalidade dos dados verrificada nas medicadas ateriores não parece ter sido afetada pela análise desses gráficos, uma vez que ainda se pode identificar certa simetria nos dados. Entretanto, faz-se necessário a verificação de tal característica, o que será apresentado a seguir.
-
-
-
-
+A análise dos BoxPlots, um pouco mais informativa, uma vez que agora é possível verificar que não há valores notadamente discrepantes que poderiam influir negativamente na regressão linear.
+A provável normalidade dos dados verrificada nas medicadas ateriores não parece ter sido afetada pela análise desses gráficos, uma vez que ainda se pode identificar certa simetria nos dados.
+Entretanto, faz-se necessário a verificação de tal característica, o que será apresentado a seguir.
 
 ```{r}
 #| echo: false
@@ -203,7 +191,8 @@ d1 + plot_annotation(
   )
 ```
 
-A dispersão de pontos mostrada na Figura 2 não indica visualmente uma tendência linear entre as duas variáveis analizadas, o que pode comprometer todos os resultados seguintes. Adimitindo que os dados realmente possam ser explicados por uma regressão linear serão realizados as demais análises.
+A dispersão de pontos mostrada na Figura 2 não indica visualmente uma tendência linear entre as duas variáveis analizadas, o que pode comprometer todos os resultados seguintes.
+Adimitindo que os dados realmente possam ser explicados por uma regressão linear serão realizados as demais análises.
 
 ### Regressão Linear
 
@@ -225,6 +214,7 @@ d1<- dados |>
     x = 'Taxa de Suicídio'
   )+
   scale_y_continuous(
+    limits = c(1,10),
     labels = scales::number_format(
       big.mark = ".",
       decimal.mark = ","
@@ -240,7 +230,6 @@ d1+plot_annotation(
     plot.tag = element_text(size = 8, hjust = 0, vjust = 0)
   )
 ```
-
 
 ```{r}
 #| warning: false
@@ -260,12 +249,12 @@ beta1 = round(beta1,3)
 
 ### Estimativas Pontuais
 
-A partir do método de Estimativas de Mínimos Quadrados, pode se obter uma estimativa pontuais para $\hat\beta_0$ = `r beta0` e para  $\hat\beta_1$ = `r beta1`.  
+A partir do método de Estimativas de Mínimos Quadrados, pode se obter uma estimativa pontuais para $\hat\beta_0$ = `r beta0` e para $\hat\beta_1$ = `r beta1`.
 
 ### Intervalos de Confiança
 
-A partir dos dados é possível obter um intervalo de confiança para as estimativas obtidas. No modelo de regressão linear simples as estimativas $\hat\beta_0$ e $\hat\beta_1$ têm distribuição de student, e portanto, pelo método da quantidade pivotal é possível determinar seu intervalo de confiança.  
-
+A partir dos dados é possível obter um intervalo de confiança para as estimativas obtidas.
+No modelo de regressão linear simples as estimativas $\hat\beta_0$ e $\hat\beta_1$ têm distribuição de student, e portanto, pelo método da quantidade pivotal é possível determinar seu intervalo de confiança.
 
 ```{r}
 #| warning: false
@@ -287,8 +276,8 @@ li.b1 = round(li.b1, 3)
 ls.b1 = round(ls.b1, 3)
 ```
 
-Procedendo com esses cálculos temos que o intervalo de confiança para $\hat\beta_0$ é [`r li.b0`, `r ls.b0`] e o intervalo de confiança de $\hat\beta_1$ é [`r li.b1`, `r ls.b1`], para um nível de confiança de 95%. É importante notar que o intervalo calculado de $\hat\beta_0$ é bastante largo, compreendendo inclusive valores negativos o que não faz sentido para os dados analizados, logo um itervalo de confiança mais realista para $\hat\beta_0$ é [0, `r ls.b0`].
-
+Procedendo com esses cálculos temos que o intervalo de confiança para $\hat\beta_0$ é \[`r li.b0`, `r ls.b0`\] e o intervalo de confiança de $\hat\beta_1$ é \[`r li.b1`, `r ls.b1`\], para um nível de confiança de 95%.
+É importante notar que o intervalo calculado de $\hat\beta_0$ é bastante largo, compreendendo inclusive valores negativos o que não faz sentido para os dados analizados, logo um itervalo de confiança mais realista para $\hat\beta_0$ é \[0, `r ls.b0`\].
 
 ```{r}
 #| warning: false
@@ -311,11 +300,22 @@ if (abs(t)>abs(t.tab)) resp = "deverá"
 
 ### Teste de Significância
 
-Como vimos anteriormente, a avaliação gráfica da dispersão dos dados não indica claramente uma relação linear entre os dados avaliados. Entretanto, pode-se realizar um teste de significância do modelo a fim de melhor compreender quão adequado é esse modelo.  
-Tomando o método dos mínimos quadrados, estimou-se o valor do coeficiente de correlação linear dos dados $\hat \rho$ = `r rho`. Em seguida calculou-se o valor da estatística temos que $t$ = `r t`. Verificou-se que o valor tabelado dessa estatística $t_{(n-1);\alpha/2} =$ `r t.tab`. Por fim, comparando os valores absolutos dessas estatísticas, verificamos que a hipótese de correlação nula `r resp` ser rejeitada, ao nível de significância de $\alpha =5\%$.  
+Como vimos anteriormente, a avaliação gráfica da dispersão dos dados não indica claramente uma relação linear entre os dados avaliados.
+Entretanto, pode-se realizar um teste de significância do modelo a fim de melhor compreender quão adequado é esse modelo.\
+Tomando o método dos mínimos quadrados, estimou-se o valor do coeficiente de correlação linear dos dados $\hat \rho$ = `r rho`.
+Em seguida calculou-se o valor da estatística temos que $t$ = `r t`.
+Verificou-se que o valor tabelado dessa estatística $t_{(n-1);\alpha/2} =$ `r t.tab`.
+Por fim, comparando os valores absolutos dessas estatísticas, verificamos que a hipótese de correlação nula `r resp` ser rejeitada, ao nível de significância de $\alpha =5\%$.\
 Outra forma de avaliar a siguinificância do modelo é realizar uma análise gráfica dos resíduos do modelo.
 
 ### Residuos versus valores ajustados
+
+Uma vez que o teste de significância do modelo não apresentou resultado satisfatório, pode-se avaliar a possibilidade de aplicar uma transformação no valores dos dados. Para tanto, pode-se aplicar o método de Box-Cox de avaliação da melhor transformação para os dados.  
+\   
+\   
+\    
+Figura 4: Escolha de $\lambda$ na transformação de Box-Cox.
+
 
 ```{r}
 #| warning: false
@@ -329,19 +329,123 @@ lambda <- t.bc$x[which.max(t.bc$y)]
  
 ```
 
+Como se pode verificar pela Figura 4, o valor de $\lambda$ está próximo ao valor de zero (`r round(lambda,3)`). Neste caso, a melhor transformação para os valores de Y é $log(Y)$, o que levará a estabilização da variância a uma normalização dos dados.
+
+```{r}
+#| warning: false
+#| eval: true
+#| results: false
+#| echo: false
+
+y = log(dados$desemp)
+m1 <- lm(y ~ x)
+res <- residuals(m1)
+
+beta1 = (sum(x*y) - as.numeric(sum(x)) * as.numeric(sum(y))/n) /
+  (sum(x^2) - ((sum (x))^2)/n)
+beta0 = mean(y) - beta1 * mean(x)
+beta0 = round(beta0,3)
+beta1 = round(beta1,3)
+```
+
+
+```{r}
+#| echo: false
+#| warning: false
+#| tbl-colum: page
+
+d1<- dados |>
+  ggplot(aes(
+    y = y, 
+    x = x, color = x)) +
+  geom_point()+
+  labs(
+    title = '',
+    y = 'Taxa de Desemprego Ajustada',
+    x = 'Taxa de Suicídio'
+  )+
+  scale_y_continuous(
+    limits = c(1,10),
+    labels = scales::number_format(
+      big.mark = ".",
+      decimal.mark = ","
+    ))+
+  geom_smooth(method=lm, se=FALSE)
+
+d1+plot_annotation(
+  title = "Figura 5: Relação entre Taxa de Desemprego ajustada e a Taxa de Suicídio  \n entre 1950 e 2019, nos EUA e sua regressão linear.") &
+  theme_bw(base_size = 8) &
+  theme(
+    legend.position = "none",
+    plot.tag.position = c(0, 1),
+    plot.tag = element_text(size = 8, hjust = 0, vjust = 0)
+  )
+```
+A Figura 5 mostra a dispersão dos dados e o modelo de regressão linear após o ajuste dos valores dos dados. Manteve-se a mesma escala da Figura 3 para evidenciar a transformação, o que leva crer que um melhor ajuste foi obtido.  
+
+```{r}
+#| warning: false
+#| eval: true
+#| results: false
+#| echo: false
+
+t.tab = dt(0.025,n-2)
+s.xix = sum((x-mean(x))^2)
+ic.beta1 = t.tab*var(y)/(sqrt(s.xix))
+ic.beta0 = t.tab*var(y)*sqrt(sum(x^2))/(sqrt(n*s.xix))
+li.b0 = beta0 - ic.beta0
+ls.b0 = beta0 + ic.beta0
+li.b1 = beta1 - ic.beta1
+ls.b1 = beta1 + ic.beta1
+li.b0 = round(li.b0, 3)
+ls.b0 = round(ls.b0, 3)
+li.b1 = round(li.b1, 3)
+ls.b1 = round(ls.b1, 3)
+```
+
+
+Desta forma, refazendo as análise anteriores, verifica-se que, pode-se obter novas estimativas para $\hat\beta_0^*$ = `r beta0`, com intervalo de confiança de \[`r li.b0`, `r ls.b0`\] e $\hat\beta_1^*$ = `r beta1`, com intervalo de confiança de \[`r li.b1`, `r ls.b1`\], para um nível de confiança de 95%. É importante notar que os novos intervalos calculados são muito mais estreitos e indicam um melhor ajuste do modelo. 
+
+```{r}
+#| warning: false
+#| eval: true
+#| results: false
+#| echo: false
+
+rho = (sum(x*y) - (sum(x)*sum(y)/n)) /
+  (sqrt((sum(x^2) - ((sum(x))^2)/n)*(sum(y^2)- ((sum (y))^2)/n)))
+
+rho = round(rho,3)
+
+t = rho*sqrt((n-2)/(1-rho^2))
+t.tab = dt(0.025,n-2)
+t = round(t,4)
+t.tab = round(t.tab,4)
+resp = "não deverá"
+if (abs(t)>abs(t.tab)) resp = "deverá"
+```
+
+
+O novo coeficiente de correlação linear dos dados $\hat \rho^*$ = `r rho`, com o valor da estatística $t$ = `r t` e $t_{(n-1);\alpha/2} =$ `r t.tab`, logo, a nova hipótese de correlação nula `r resp` ser rejeitada, ao nível de significância de $\alpha =5\%$.  
+
+
+
 ### Testes de diagnóstico
 
-Pode-se ainda utilizar um conjunto de testes de diagnóstico para completar o diagnóstico gráfico dos resíduos. Como:  
+Pode-se ainda utilizar um conjunto de testes de diagnóstico para completar o diagnóstico gráfico dos resíduos.
+Como:
 
-:::{.incrementyal}
-- Teste de Kolmogorov-Smirnov  
-- Teste de Shapiro-Wilks  
-- Teste de Goldfeld-Quandt  
-- Teste de Breush-Pagan  
-- Teste de Park  
-- Teste F para linearidade
-- Teste para avaliação da independência dos resíduos  
+::: incrementyal
+-   Teste de Kolmogorov-Smirnov\
+-   Teste de Shapiro-Wilks\
+-   Teste de Goldfeld-Quandt\
+-   Teste de Breush-Pagan\
+-   Teste de Park\
+-   Teste F para linearidade
+-   Teste para avaliação da independência dos resíduos\
 :::
+
+##### Teste de Kolmogorov-Smirnov
 
 ```{r}
 #| warning: false
@@ -351,14 +455,9 @@ Pode-se ainda utilizar um conjunto de testes de diagnóstico para completar o di
 t.ks = ks.test(res, "pnorm", mean(res), sd(res))
 ```
 
-
-##### Teste de Kolmogorov-Smirnov
-
 Avalia o grau de concordância entre a distribuição de um conjunto de valores observados e determinada distribuição teórica. Consiste em comparar a distribuição de frequência acumulada da distribuição teórica com aquela observada. Realizado o teste obteve-se um p-valor de `r round(t.ks[[2]][1],3)`, o que inviabiliza rejeitar a hipótese de que haja normalidade entre os dados, com um grau de confiabilidade minimamente razoável.
 
 ##### Teste de Shapiro-Wilks
-
-
 
 ```{r}
 #| warning: false
@@ -369,10 +468,11 @@ Avalia o grau de concordância entre a distribuição de um conjunto de valores 
 t.sw = shapiro.test(res)
 
 ```
-O teste de Shapiro-Wilks é um procedimento alternativo ao teste de Kolmogorov-Smirnov para avaliar normalidade. Realizado o teste obteve-se um p-valor de `r round(t.sw[[2]][1],3)`, o que, semelhantemente, inviabiliza rejeitar a hipótese de que haja normalidade entre os dados, com um grau de confiabilidade minimamente razoável.
+
+O teste de Shapiro-Wilks é um procedimento alternativo ao teste de Kolmogorov-Smirnov para avaliar normalidade.
+Realizado o teste obteve-se um p-valor de `r round(t.sw[[2]][1],3)`, o que, semelhantemente, inviabiliza rejeitar a hipótese de que haja normalidade entre os dados, com um grau de confiabilidade minimamente razoável.
 
 ##### Teste de Goldfeld-Quandt
-
 
 ```{r}
 #| warning: false
@@ -383,7 +483,9 @@ O teste de Shapiro-Wilks é um procedimento alternativo ao teste de Kolmogorov-S
 t.gq = gqtest(m1)
 
 ```
-Esse teste envolve o ajuste de dois modelos de regressão, separando-se as observações das duas extremidades da distribuição da variável dependente. Realizado o teste obteve-se um p-valor de `r round(t.gq[[5]][1],3)`, o que inviabiliza rejeitar a hipótese de que haja homocedasticidade entre os dados, com um grau de confiabilidade de 95%.
+
+Esse teste envolve o ajuste de dois modelos de regressão, separando-se as observações das duas extremidades da distribuição da variável dependente.
+Realizado o teste obteve-se um p-valor de `r round(t.gq[[5]][1],3)`, o que inviabiliza rejeitar a hipótese de que haja homocedasticidade entre os dados, com um grau de confiabilidade de 95%. Entretanto, como o p-valor obtido é próximo do necessário para a rejeição da hipotese nula, cabe um novo teste para a confirmação do resultado obtido.
 
 ##### Teste de Breush-Pagan
 
@@ -395,9 +497,12 @@ Esse teste envolve o ajuste de dois modelos de regressão, separando-se as obser
 
 t.bp = bptest(m1, studentize = FALSE)
 ```
-Esse teste é baseado no ajuste de um modelo de regressão em que a variável dependente é definida pelos resíduos do modelo de interesse. Se grande parte da variabilidade dos resíduos é explicada pelo modelo, então rejeita-se a hipótese de homocedasticidade. Realizado o teste obteve-se um p-valor de `r round(t.bp[[4]][1],3)`, desta foram deve-se rejeitar a explicação dada pelo teste, assim, não se pode rejeitar a  hipótese de que haja homocedasticidade entre os dados, com um grau de confiabilidade minimamente razoável.
 
-##### Teste de Park 
+Esse teste é baseado no ajuste de um modelo de regressão em que a variável dependente é definida pelos resíduos do modelo de interesse.
+Se grande parte da variabilidade dos resíduos é explicada pelo modelo, então rejeita-se a hipótese de homocedasticidade.
+Realizado o teste obteve-se um p-valor de `r round(t.bp[[4]][1],3)`, desta foram deve-se rejeitar a explicação dada pelo teste, assim, não se pode rejeitar a hipótese de que haja homocedasticidade entre os dados, com um grau de confiabilidade minimamente razoável.
+
+##### Teste de Park
 
 ```{r}
 #| warning: false
@@ -408,7 +513,10 @@ res2 <- res^2
 t.p = summary(lm(res2 ~ x))
 ```
 
-Esse teste é baseado no ajuste de um modelo de regressão em que a variável dependente é definida pelos quadrados dos resíduos do modelo de interesse. Nesse caso, se $\beta_1$ diferir significativamente de zero, rejeita-se a hipótese de homocedasticidade. O valor de $\beta_1$ obtido no teste foi de `r round(t.p[[4]][2],3)` com p-valor de `r round(t.p[[4]][8],3)`. Por esse teste deve-se rejeitar a hipótese de homocedasticidade, com confiabilidade de 95%.
+Esse teste é baseado no ajuste de um modelo de regressão em que a variável dependente é definida pelos quadrados dos resíduos do modelo de interesse.
+Nesse caso, se $\beta_1$ diferir significativamente de zero, rejeita-se a hipótese de homocedasticidade.
+O valor de $\beta_1$ obtido no teste foi de `r round(t.p[[4]][2],3)` com p-valor de `r round(t.p[[4]][8],3)`.
+Por esse teste não se deve rejeitar a hipótese de homocedasticidade, com confiabilidade de 95%.
 
 ##### Teste F para linearidade
 
@@ -420,7 +528,11 @@ Esse teste é baseado no ajuste de um modelo de regressão em que a variável de
 m_kmedias <- lm(y ~ factor(x))
 t.fl = anova(m1, m_kmedias)
 ```
-O teste da falta de ajuste permite testar formalmente a adequação do ajuste do modelo de regressão. Neste ponto assumimos que os pressupostos de normalidade, variância constante e independência são satisfeitos. A ideia central para testar a linearidade é decompor SQRes em duas partes: erro puro e falta de ajuste que vão contribuir para a definição da estatística de teste F. Realizado o teste obteve-se um valore de p-vaçor igual a `r round(t.fl[[6]][2],3)`, o que inviabiliza a rejeição da hipótese que há uma relação linear entre as variáveis.
+
+O teste da falta de ajuste permite testar formalmente a adequação do ajuste do modelo de regressão.
+Neste ponto assume-se que os pressupostos de normalidade, variância constante e independência são satisfeitos, como demosntrado pelos testes realizados. A ideia central para testar a linearidade é decompor SQRes em duas partes: erro puro e falta de ajuste que vão contribuir para a definição da estatística de teste F.
+Realizado o teste obteve-se um valore de p-valor igual a `r round(t.fl[[6]][2],3)`, o que demanda a rejeição da hipótese que há uma relação linear entre as variáveis. 
+
 
 ##### Teste para avaliação da independência dos resíduos
 
@@ -432,7 +544,14 @@ O teste da falta de ajuste permite testar formalmente a adequação do ajuste do
 t.dw = dwtest(m1)
 ```
 
-O teste para avaliação da independência dos resíduos é utilizado para detectar a presença de autocorrelação provenientes de análise de regressão. Realizando o teste obteve-se um valor de p-valor aproximadadente igual a  `r round(t.dw[[4]][1],3)`, indicando que se deve rejeitar a hipotese que não existe correlação serial entre os dados, com uma confiança de 95%.
-
+Tendo em vista, o resultado obtido no teste anterior esse teste pode esclarecer ainda mais o ajuste do modelo.   
+O teste para avaliação da independência dos resíduos é utilizado para detectar a presença de autocorrelação provenientes de análise de regressão.  Realizando o teste obteve-se um valor de p-valor aproximadadente igual a `r round(t.dw[[4]][1],3)`, indicando que se deve rejeitar a hipotese que não existe correlação serial entre os dados, com uma confiança de 95%.
 
 ## Conclusão
+
+Em uma análise preliminar verificou-se que os dados apresentavam certa normalidade, mas graficamente não podia se afirmar que estabelecessem uma realção linear. Aplicando-se o método dos quadrados ao modelo de regressão linear proposto, verificou-se que o mesmo não obteve o resultado desejado em um teste de significância. Por conta deste teste, propÔS-se realizar uma transformação dos dados conforme avaliação proposta por Box-Cox. A transformação logarítimica dos dados levou a uma normalização e homocedasticidade conforme verificada pelos testes realizados. Entretanto, a trasformação embora tenha obtido um resultado satisfatório em um novo teste de significância, não foi capaz de obter a mesmo resultado na avaliação de sua linearidade por um teste F. Deste impasse, tentou-se avaliar se haveria uma dependência linear entre os resíduos do modelo, o que não se provou aceitável.   
+Desta forma, embora a transformação tenha garantido as premissas para a plicação de uma regressão linear essa não foi suficiente para explicar o comportamento dos dados e isto não se deve a uma possível correlação serial dos resíduos. 
+
+
+
+
