--- a/Relatório.qmd
+++ b/Relatório.qmd
@@ -231,6 +231,11 @@ d1+plot_annotation(
   )
 ```
 
+### Análise dos Resíduos
+
+A partir do modelo proposto foram feitas as análises gráficas apresentadas na Figura 4.  
+\    
+
 ```{r}
 #| warning: false
 #| eval: true
@@ -239,6 +244,71 @@ d1+plot_annotation(
 
 x = dados$suic
 y = dados$desemp
+m1 <- lm(y ~ x)
+res <- residuals(m1)
+d.ajustados <- predict(m1, as.data.frame(x), interval='confidence')
+
+```
+
+```{r}
+#| echo: false
+#| warning: false
+#| tbl-colum: page
+
+
+
+
+d1<- dados |>
+  ggplot(aes(
+    x = d.ajustados[,1], 
+    y = res, color = res)) +
+  geom_point()+
+  labs(
+    title = '',
+    y = 'Resíduos',
+    x = 'Taxa de Desemprego Ajustada'
+  )+
+  scale_y_continuous(
+    labels = scales::number_format(
+      big.mark = ".",
+      decimal.mark = ","
+    ))
+
+
+d2 <- dados |>
+  ggplot(aes(sample=res))+
+    labs(
+    title = '',
+    y = 'Resíduos Studentizados',
+    x = 'Quantis t-Student'
+  )+
+  scale_y_continuous(
+    labels = scales::number_format(
+      big.mark = ".",
+      decimal.mark = ","
+    ))+
+  stat_qq() + stat_qq_line(col="blue") 
+  
+
+
+d1+d2 + plot_annotation(
+  title = "Figura 4: Análise de resíduos do modelo de regressão proposto.") &
+  theme_bw(base_size = 8) &
+  theme(
+    legend.position = "none",
+    plot.tag.position = c(0, 1),
+    plot.tag = element_text(size = 8, hjust = 0, vjust = 0)
+  )
+```
+
+A Figura 4 permite observar a falta de homocedasticidade tanto pelo gráfico dos valores ajustados pelo modelo e os resíduos, quanto pelo gráfico dos quantis t-Student. No primeiro caso, não se observa que os pontos fiquem em torno do zero e no segundo, não se ajustam a reta.
+
+```{r}
+#| warning: false
+#| eval: true
+#| results: false
+#| echo: false
+
 n = length(x)
 beta1 = (sum(x*y) - as.numeric(sum(x)) * as.numeric(sum(y))/n) /
   (sum(x^2) - ((sum (x))^2)/n)
@@ -301,7 +371,7 @@ if (abs(t)>abs(t.tab)) resp = "deverá"
 ### Teste de Significância
 
 Como vimos anteriormente, a avaliação gráfica da dispersão dos dados não indica claramente uma relação linear entre os dados avaliados.
-Entretanto, pode-se realizar um teste de significância do modelo a fim de melhor compreender quão adequado é esse modelo.\
+Entretanto, pode-se realizar um teste de significância do modelo a fim de melhor compreender quão adequado é esse modelo.
 Tomando o método dos mínimos quadrados, estimou-se o valor do coeficiente de correlação linear dos dados $\hat \rho$ = `r rho`.
 Em seguida calculou-se o valor da estatística temos que $t$ = `r t`.
 Verificou-se que o valor tabelado dessa estatística $t_{(n-1);\alpha/2} =$ `r t.tab`.
@@ -314,7 +384,7 @@ Uma vez que o teste de significância do modelo não apresentou resultado satisf
 \   
 \   
 \    
-Figura 4: Escolha de $\lambda$ na transformação de Box-Cox.
+Figura 5: Escolha de $\lambda$ na transformação de Box-Cox.
 
 
 ```{r}
@@ -322,14 +392,11 @@ Figura 4: Escolha de $\lambda$ na transformação de Box-Cox.
 #| eval: true
 #| results: false
 #| echo: false
-m1 <- lm(y ~ x)
-res <- residuals(m1)
 t.bc <- MASS::boxcox(m1)
 lambda <- t.bc$x[which.max(t.bc$y)]
- 
 ```
 
-Como se pode verificar pela Figura 4, o valor de $\lambda$ está próximo ao valor de zero (`r round(lambda,3)`). Neste caso, a melhor transformação para os valores de Y é $log(Y)$, o que levará a estabilização da variância a uma normalização dos dados.
+Como se pode verificar pela Figura 5, o valor de $\lambda$ está próximo ao valor de zero (`r round(lambda,3)`). Neste caso, a melhor transformação para os valores de Y é $log(Y)$, o que levará a estabilização da variância a uma normalização dos dados.
 
 ```{r}
 #| warning: false
@@ -373,7 +440,7 @@ d1<- dados |>
   geom_smooth(method=lm, se=FALSE)
 
 d1+plot_annotation(
-  title = "Figura 5: Relação entre Taxa de Desemprego ajustada e a Taxa de Suicídio  \n entre 1950 e 2019, nos EUA e sua regressão linear.") &
+  title = "Figura 6: Relação entre Taxa de Desemprego ajustada e a Taxa de Suicídio  \n entre 1950 e 2019, nos EUA e sua regressão linear.") &
   theme_bw(base_size = 8) &
   theme(
     legend.position = "none",
@@ -381,7 +448,8 @@ d1+plot_annotation(
     plot.tag = element_text(size = 8, hjust = 0, vjust = 0)
   )
 ```
-A Figura 5 mostra a dispersão dos dados e o modelo de regressão linear após o ajuste dos valores dos dados. Manteve-se a mesma escala da Figura 3 para evidenciar a transformação, o que leva crer que um melhor ajuste foi obtido.  
+
+A Figura 6 mostra a dispersão dos dados e o modelo de regressão linear após o ajuste dos valores dos dados. Manteve-se a mesma escala da Figura 3 para evidenciar a transformação, o que leva crer que um melhor ajuste foi obtido.  
 
 ```{r}
 #| warning: false
@@ -441,7 +509,7 @@ Como:
 -   Teste de Goldfeld-Quandt\
 -   Teste de Breush-Pagan\
 -   Teste de Park\
--   Teste F para linearidade
+-   Teste F para linearidade\
 -   Teste para avaliação da independência dos resíduos\
 :::
 
@@ -485,7 +553,7 @@ t.gq = gqtest(m1)
 ```
 
 Esse teste envolve o ajuste de dois modelos de regressão, separando-se as observações das duas extremidades da distribuição da variável dependente.
-Realizado o teste obteve-se um p-valor de `r round(t.gq[[5]][1],3)`, o que inviabiliza rejeitar a hipótese de que haja homocedasticidade entre os dados, com um grau de confiabilidade de 95%. Entretanto, como o p-valor obtido é próximo do necessário para a rejeição da hipotese nula, cabe um novo teste para a confirmação do resultado obtido.
+Realizado o teste obteve-se um p-valor de `r round(t.gq[[5]][1],3)`, o que demanda rejeitar a hipótese de que haja homocedasticidade entre os dados, com um grau de confiabilidade de 95%. Entretanto, como o p-valor obtido é próximo do necessário para a rejeição da hipotese nula, cabe um novo teste para a confirmação do resultado obtido.
 
 ##### Teste de Breush-Pagan
 
@@ -499,8 +567,8 @@ t.bp = bptest(m1, studentize = FALSE)
 ```
 
 Esse teste é baseado no ajuste de um modelo de regressão em que a variável dependente é definida pelos resíduos do modelo de interesse.
-Se grande parte da variabilidade dos resíduos é explicada pelo modelo, então rejeita-se a hipótese de homocedasticidade.
-Realizado o teste obteve-se um p-valor de `r round(t.bp[[4]][1],3)`, desta foram deve-se rejeitar a explicação dada pelo teste, assim, não se pode rejeitar a hipótese de que haja homocedasticidade entre os dados, com um grau de confiabilidade minimamente razoável.
+Se grande parte da variabilidade dos resíduos não é explicada pelo modelo, então rejeita-se a hipótese de homocedasticidade.
+Realizado o teste obteve-se um p-valor de `r round(t.bp[[4]][1],3)`, desta foram deve-se rejeitar a hipótese de que haja homocedasticidade entre os dados, com um grau de confiabilidade de 95%.
 
 ##### Teste de Park
 
